# PassGenerator

./: CMakeLists.txt  README.md  build_script.sh  unix_build.sh  vcpkg.json  windows_build.bat
src/: Application.cpp  Application.hpp  PassGenerator.cpp  PassGenerator.hpp  PlatformManager.cpp  PlatformManager.hpp  UI.cpp  UI.hpp  main.cpp  utils.hpp
